change theme & update category

--- a/_config.yml
+++ b/_config.yml
@@ -98,7 +98,9 @@ ignore:
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: delicate
+## butterfly https://github.com/jerryc127/hexo-theme-butterfly
+## delicate
+theme: butterfly
 
 # Deployment
 ## Docs: https://hexo.io/docs/one-command-deployment
