--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "hexo-generator-tag": "^2.0.0",
     "hexo-renderer-ejs": "^2.0.0",
     "hexo-renderer-marked": "^6.0.0",
+    "hexo-renderer-pug": "^3.0.0",
     "hexo-renderer-stylus": "^3.0.0",
     "hexo-server": "^3.0.0",
     "hexo-theme-a4": "^1.6.9",
+    "hexo-theme-butterfly": "^4.10.0",
     "hexo-theme-landscape": "^1.0.0"
   }
 }
