--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "hexo-generator-search": "^2.4.3",
     "hexo-generator-tag": "^2.0.0",
     "hexo-pagination": "^4.0.0",
+    "hexo-prism-plugin": "^2.3.0",
     "hexo-render-pug": "^2.1.4",
     "hexo-renderer-ejs": "^2.0.0",
     "hexo-renderer-marked": "^6.0.0",
     "hexo-renderer-stylus": "^3.0.0",
     "hexo-server": "^3.0.0",
+    "hexo-site": "file:",
     "hexo-theme-a4": "^1.9.6",
     "hexo-theme-butterfly": "^4.10.0",
     "hexo-theme-landscape": "^1.0.0"
