--- a/_config.a4.yml
+++ b/_config.a4.yml
@@ -44,7 +44,7 @@ favicon: /img/favicon.webp
 
 # 你可能会用到的 https://ninojay.top/2023/website-cdn/
 cdn:
-  enable: true # 如果你修改了 css/js ，也许需要把cdn设置为false才会生效
+  enable: false # 如果你修改了 css/js ，也许需要把cdn设置为false才会生效
   choose: jsdelivr  # aliyun | unpkg| jsdelivr  # 都调整为利于国内的cdn，建议使用默认的 jsdelivr 即可
 
 # 实验性功能：A4色调调整：颜色搭配是很主观的行为
