--- a/_config.yml
+++ b/_config.yml
@@ -121,3 +121,16 @@ feed:
   content_limit: 140
   content_limit_delim: ' '
   order_by: -date
+
+
+mathjax:
+  tags: none # or 'ams' or 'all'
+  single_dollars: true # enable single dollar signs as in-line math delimiters
+  cjk_width: 0.9 # relative CJK char width
+  normal_width: 0.6 # relative normal (monospace) width
+  append_css: true # add CSS to pages rendered by MathJax
+  every_page: false # if true, every page will be rendered by MathJax regardless the `mathjax` setting in Front-matter
+  packages: # extra packages to load
+  extension_options: {}
+
+all_minifier: true
